--- a/miniapp/views/index.html
+++ b/miniapp/views/index.html
@@ -1,37 +1,61 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CS330 Albums</title>
-    <link href="./assets/css/style.css" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,300&family=Alegreya+Sans:wght@100;300;400;500;700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Oleo+Script:wght@400;700&display=swap" rel="stylesheet">
+    <title>Spotify Layout</title>
+    <link rel="stylesheet" href="../assets/css/styles.css">
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </head>
 <body>
-  <main>
-    <input type="button" id = "play-btn" value="Play"/>
-
-
-    <!-- List of photos to be populated with data from music.json -->
-    <section id="photo-albums" >
-      <div id="photos"></div>
-    </section>
-
-    <!-- List of music albums to be populated with data from music.json -->
-    <section id="music-albums">
-      <h1> Album List </h1>
-      <div id="albums"></div>
-    </section>
-
-
-    <div id="overlay" class="hide">
-      <div class="info">Topical information</div>
+    <div class="container">
+        <aside class="sidebar">
+            <div class="logo">Spotify</div>
+            <nav>
+                <ul>
+                    <li><a href="#"><ion-icon name="home-sharp"></ion-icon> Home</a></li>
+                    <li><a href="#"><ion-icon name="search-sharp"></ion-icon> Search</a></li>
+                </ul>
+            </nav>
+            <div class="library">
+                <div class="playlist">
+                    <h3>Your Library</h3>
+                    <button>Create playlist</button>
+                </div>
+                <div class="podcasts">
+                    <h3>Podcasts</h3>
+                    <button>Browse podcasts</button>
+                </div>
+            </div>
+        </aside>
+        <main class="main-content">
+            <header>
+                <button aria-label="toggle-sidebar" class="sidebar-toggle">
+                    <ion-icon name="menu-outline"></ion-icon>
+                </button>
+                <div class="profile">
+                    <button>Sign up</button>
+                    <button>Log in</button>
+                </div>
+            </header>
+            <section class="content">
+                <h2>Popular albums</h2>
+                <div id="albums" class="scrollable">
+                   
+                </div>
+                <h2>Playlists</h2>   
+                <div class="scrollable">
+                    <div class="item playlist">
+                        <a href="/playlist" class="playlist-art">
+                            <img src="/assets/img/summer_flows.jpg" class="playlist-art" alt="Playlist Cover">
+                            <div class="playlist-name">My Playlist #1</div>
+                        </a>
+                    </div>
+                </div>        
+            </section>
+        </main>
     </div>
-
-    <audio id="sample-music" src="./assets/sound/sample.wav"></audio>
-  </main>
-<script src="./assets/js/processdata.js" type="application/javascript"></script>
+    <script type="module" src="../assets/js/processdata.js"></script>
 </body>
 </html>
